fixed form alignment

--- a/src/Login.css
+++ b/src/Login.css
@@ -14,10 +14,10 @@ body{
     color: red;
     background: transparent;
     backdrop-filter: blur(10px);
-    width: 400px;
+    width: 500px;
     margin: 50px auto;
-    margin-top:110px;
-    margin-left: 110px;
+    margin-top:120px;
+    margin-left: 130px;
     padding-bottom: 20px;
     max-height:fit-content;
     border-radius: 10px;
@@ -74,6 +74,7 @@ input:hover{
 .l1{
     color: rgb(230, 230, 240);
     cursor: pointer;
+    margin-bottom: 20px;
 }
 .l1:hover{
     text-decoration:underline;
